refactor: add  Builder to the contract definition class